sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value k
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
                                      ^AlgCocktailSort1:8: error: not found: value k
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
                                                      ^AlgCocktailSort1:10: error: not found: value k
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
                                      ^AlgCocktailSort1:10: error: not found: value k
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
                                                      ^