sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	val n:Int = getNombreValeurs()
	var swapped:Boolean = true
	while(swapped) {
		swapped = false
		for (i<- 0 to n-2) {
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
		for (i <- n-2 to 0 by -1) {
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}}
	}	
	
}
